--- a/requirements.txt
+++ b/requirements.txt
@@ -2,6 +2,7 @@ pytesseract~=0.2.7
 opencv-python~=3.4
 
 -e shared-file-format/python
+-e shared-file-evaluations/python
 
 defusedxml~=0.6.0
 cffi~=1.14.5
